created shell for all services
